fixed about pages font and spacing

--- a/src/pages/Resume/resume.css
+++ b/src/pages/Resume/resume.css
@@ -36,6 +36,7 @@ body {
     background: white;
     padding: 2rem;
     border-radius: 10px;
+    color: black;
 }
 
 /* LEFT SIDE */
